# ddpm-inpainting

./: .gitignore  README.md  main.py  pyproject.toml
configs/: config.yaml
configs/dataset/: cifar10.yaml  mnist.yaml
configs/model/: autoencoder_kl_cifar10.yaml  ddpm_cifar10.yaml  ddpm_cifar10_attention.yaml  ddpm_jit_cifar10.yaml  ddpm_mnist.yaml  ddpm_mnist_attention.yaml  edm_song_unet_cifar10.yaml
configs/model/schedule/: cosine.yaml  linear.yaml
configs/sampling/: default.yaml
configs/training/: default.yaml
scripts/: sample.py  train.py
src/data/: __init__.py  cifar10.py  config.py  mnist.py  utils.py
src/models/: __init__.py  autoencoder_kl.py  blocks.py  ddpm.py  edm.py  unet.py  unet_attention.py
src/models/backbones/: edm_precond.py  jit.py  unet.py  unet_attention.py
src/models/losses/: __init__.py  edm_loss.py  epsilon_loss.py  prediction_type.py  v_loss.py  x_loss.py
src/models/utils/: blocks.py
src/noise_schedules/: __init__.py  cosine.py  linear.py
src/training/: trainer.py
src/utils/: set_seed.py
